--- a/myweb.html
+++ b/myweb.html
@@ -10,12 +10,12 @@
 <body>
     <div class="header">
         <div class="header_top">
-            <div class="box_tophd" id="top_header1"><a href="#"><h2>Home</h2></a></div>
+            <div class="box_tophd" id="top_header1"><a href="myweb.html"><h2>Home</h2></a></div>
             <div class="box_tophd" id="top_header2"><a href="#"><h2>Tutorial</h2></a></div>
             <div class="box_tophd" id="top_header3"><a href="#"><h2>Tutorial2</h2></a></div>
             <div class="box_tophd" id="top_header4"><a href="#"><h2>About</h2></a></div>
         </div>
-        <hr style="border: 3px solid black;" width="1120px">
+        <hr style="border: 3px solid black; position: relative; left: -10px;" width="1120px">
     </div>
     <div class="container">
         <div class="container_left">
@@ -58,6 +58,18 @@
         <div class="container_right">
 
         </div>
+        <div class="clr"></div>
+        
+        <footer id="footer">
+            
+            <div class="footer_content">
+            <a href="myweb.html">Home</a> &nbsp;| &nbsp;<a href="#">Tutorial</a> &nbsp;| 
+            &nbsp;<a href="#">Tutorial2</a>&nbsp;| &nbsp;<a href="#">About</a> 
+            </div>
+            <div class="footer_content2">
+            <p>Copyright &copy;  Kungbaman 2022 </p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
