--- a/myweb.html
+++ b/myweb.html
@@ -15,7 +15,11 @@
             <div class="box_tophd" id="top_header3"><a href="#"><h2>Tutorial2</h2></a></div>
             <div class="box_tophd" id="top_header4"><a href="#"><h2>About</h2></a></div>
         </div>
-        <hr style="border: 3px solid black; position: relative; left: -10px;" width="1120px">
+        <!-- <hr style="border: 3px solid black; position: relative; left: -10px; margin: 0 auto;" width="1120px"> -->
+        
+        <!-- <img src="image/chelsea_comment.gif" style="position: relative; top: -10px; z-index: 1; background-size: cover; background-repeat: no-repeat;" width="100%" height="15px" alt=""> -->
+
+    
     </div>
     <div class="container">
         <div class="container_left">
