--- a/myweb.html
+++ b/myweb.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natchapol Kamonchanoktham</title>
     <link rel="stylesheet" href="style2.css">
+    <script src="app.js"></script>
 </head>
 <body>
     <div class="header">
         <div class="header_top">
             <div class="box_tophd" id="top_header1"><a href="myweb.html"><h2>Home</h2></a></div>
-            <div class="box_tophd" id="top_header2"><a href="#"><h2>Tutorial</h2></a></div>
-            <div class="box_tophd" id="top_header3"><a href="#"><h2>Tutorial2</h2></a></div>
-            <div class="box_tophd" id="top_header4"><a href="#"><h2>About</h2></a></div>
+            <div onclick="messages();" class="box_tophd" id="top_header2"><a href="#"><h2>Tutorial</h2></a></div>
+            <div onclick="messages();" class="box_tophd" id="top_header3"><a href="#"><h2>Tutorial2</h2></a></div>
+            <div onclick="messages();" class="box_tophd" id="top_header4"><a href="#"><h2>About</h2></a></div>
         </div>
         <!-- <hr style="border: 3px solid black; position: relative; left: -10px; margin: 0 auto;" width="1120px"> -->
         
@@ -68,8 +69,8 @@
         <footer id="footer">
             
             <div class="footer_content">
-            <a href="myweb.html">Home</a> &nbsp;| &nbsp;<a href="#">Tutorial</a> &nbsp;| 
-            &nbsp;<a href="#">Tutorial2</a>&nbsp;| &nbsp;<a href="#">About</a> 
+            <a href="myweb.html">Home</a> &nbsp;| &nbsp;<a onclick="messages();" href="#">Tutorial</a> &nbsp;| 
+            &nbsp;<a onclick="messages();" href="#">Tutorial2</a>&nbsp;| &nbsp;<a onclick="messages();" href="#">About</a> 
             </div>
             <div class="footer_content2">
             <p>Copyright &copy;  Kungbaman 2022 </p>
