--- a/myweb.html
+++ b/myweb.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natchapol Kamonchanoktham</title>
     <link rel="stylesheet" href="style2.css">
-    <script src="app.js"></script>
 </head>
 <body>
     <div class="header">
@@ -69,13 +68,14 @@
         <footer id="footer">
             
             <div class="footer_content">
-            <a href="myweb.html">Home</a> &nbsp;| &nbsp;<a onclick="messages();" href="#">Tutorial</a> &nbsp;| 
-            &nbsp;<a onclick="messages();" href="#">Tutorial2</a>&nbsp;| &nbsp;<a onclick="messages();" href="#">About</a> 
+            <a href="myweb.html">Home</a> &nbsp;| &nbsp;<a class="empty_room" href="#">Tutorial</a> &nbsp;| 
+            &nbsp;<a class="empty_room2" href="#">Tutorial2</a>&nbsp;| &nbsp;<a class="empty_room3" href="#">About</a> 
             </div>
             <div class="footer_content2">
             <p>Copyright &copy;  Kungbaman 2022 </p>
             </div>
         </footer>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
