--- a/myweb.html
+++ b/myweb.html
@@ -43,6 +43,7 @@
                 <div id="myfav_2">
                     <img src="image/fav2.png" alt="">
                 </div>
+               <div class="myfavbox_345">
                 <div id="myfav_3" class="boximg_fav">
                     <img src="image/West+Ham+United+v+Chelsea+Premier+League+NTqEei_tVDgx.jpg" alt="">
                 </div>
@@ -52,6 +53,7 @@
                 <div id="myfav_5" class="boximg_fav">
                     <img src="image/2c3447dcf313c5afe.jpg" alt="">
                 </div>
+               </div>
                 <div id="myfav_6" class="boximg_fav">
                     <img src="image/259115493_572606697172967_465434658647736627_n.jpg" alt="">
                 </div>
