--- a/myweb.html
+++ b/myweb.html
@@ -6,14 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natchapol Kamonchanoktham</title>
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
     <div class="header">
         <div class="header_top">
-            <div class="box_tophd" id="top_header1"><a href="myweb.html"><h2>Home</h2></a></div>
-            <div onclick="messages();" class="box_tophd" id="top_header2"><a href="#"><h2>Tutorial</h2></a></div>
-            <div onclick="messages();" class="box_tophd" id="top_header3"><a href="#"><h2>Tutorial2</h2></a></div>
-            <div onclick="messages();" class="box_tophd" id="top_header4"><a href="#"><h2>About</h2></a></div>
+            <div class="header_top-1">
+                <div class="box_tophd" id="top_header1"><a href="myweb.html"><h2>Home</h2></a></div>
+                <div onclick="messages();" class="box_tophd" id="top_header2"><a href="#"><h2>Tutorial</h2></a></div>
+                <div onclick="messages();" class="box_tophd" id="top_header3"><a href="#"><h2>Tutorial2</h2></a></div>
+                <div onclick="messages();" class="box_tophd" id="top_header4"><a href="#"><h2>About</h2></a></div>    
+            </div>
+            <div class="header_top-2">
+                <div class="logo-facebook"><a href="https://www.facebook.com/kungtim.yongun" target="_blank"><i class="fab fa-facebook"></i></a></div>
+                <div class="logo-github"><a href="https://github.com/kungbaman" target="_blank"><i class="fab fa-github-alt"></i></a></div>        
+            </div>
         </div>
         <!-- <hr style="border: 3px solid black; position: relative; left: -10px; margin: 0 auto;" width="1120px"> -->
         
