--- a/myweb.html
+++ b/myweb.html
@@ -18,8 +18,9 @@
                 <div onclick="messages();" class="box_tophd" id="top_header4"><a href="#"><h2>About</h2></a></div>    
             </div>
             <div class="header_top-2">
+                <div class="content-email"><i class="fas fa-envelope"></i> natchapol.kamo@hotmail.com</div>
                 <div class="logo-facebook"><a href="https://www.facebook.com/kungtim.yongun" target="_blank"><i class="fab fa-facebook"></i></a></div>
-                <div class="logo-github"><a href="https://github.com/kungbaman" target="_blank"><i class="fab fa-github-alt"></i></a></div>        
+                <div class="logo-github"><a href="https://github.com/kungbaman" target="_blank"><i class="fab fa-github"></i></a></div>        
             </div>
         </div>
         <!-- <hr style="border: 3px solid black; position: relative; left: -10px; margin: 0 auto;" width="1120px"> -->
@@ -81,7 +82,11 @@
             &nbsp;<a class="empty_room2" href="#">Tutorial2</a>&nbsp;| &nbsp;<a class="empty_room3" href="#">About</a> 
             </div>
             <div class="footer_content2">
-            <p>Copyright &copy;  Kungbaman 2022 </p>
+            <p>Copyright &copy;  Kungbaman 
+                <script>
+                    document.write(new Date().getFullYear())
+                </script>
+            </p>
             </div>
         </footer>
     </div>
