--- a/aboutme.html
+++ b/aboutme.html
@@ -12,10 +12,10 @@
     <div class="header">
         <div class="header_top">
             <div class="header_top-1">
-                <div class="box_tophd" id="top_header1"><a href="myweb.html"><h2>Home</h2></a></div>
+                <div class="box_tophd" id="top_header1"><a href="home.html"><h2>Home</h2></a></div>
                 <div onclick="messages();" class="box_tophd" id="top_header2"><a href="#"><h2>Tutorial</h2></a></div>
                 <div onclick="messages();" class="box_tophd" id="top_header3"><a href="#"><h2>Tutorial2</h2></a></div>
-                <div onclick="messages();" class="box_tophd" id="top_header4"><a href="#"><h2>About</h2></a></div>    
+                <div class="box_tophd" id="top_header4"><a href="home.html#my-project"><h2>About</h2></a></div>    
             </div>
             <div class="header_top-2">
                 <div class="content-email"><i class="fas fa-envelope"></i> natchapol.kamo@hotmail.com</div>
@@ -78,7 +78,7 @@
         <footer id="footer">
             
             <div class="footer_content">
-            <a href="myweb.html">Home</a> &nbsp;| &nbsp;<a class="empty_room" href="#">Tutorial</a> &nbsp;| 
+            <a href="home.html">Home</a> &nbsp;| &nbsp;<a class="empty_room" href="#">Tutorial</a> &nbsp;| 
             &nbsp;<a class="empty_room2" href="#">Tutorial2</a>&nbsp;| &nbsp;<a class="empty_room3" href="#">About</a> 
             </div>
             <div class="footer_content2">
